--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
+    "immer": "^3.2.0",
     "lodash-es": "^4.17.11",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
