Create game form

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test"
+      "pre-commit": "npm run lint"
     }
   },
   "engines": {
