--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "start-project",
-  "version": "1.0.0",
+  "name": "debchik",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cibuild": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --progress",
+    "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --progress",
     "serve": "webpack-dev-server --config build/webpack.dev.js --inline --colors --open --serve --hot --progress",
     "test": "cross-env NODE_ENV=test jest",
     "stats": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --profile --json > stats.json",
@@ -24,70 +24,52 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "core-js": "^3.1.4",
-    "immer": "^3.2.0",
-    "lodash-es": "^4.17.14",
-    "node-sass": "^4.12.0",
-    "normalize.css": "^8.0.1",
+    "core-js": "^3.6.5",
+    "immer": "^6.0.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
-    "redux-saga": "^1.0.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@redux-saga/testing-utils": "^1.0.3",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-plugin-import": "^1.12.0",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-redux-saga": "^1.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "circular-dependency-plugin": "^5.0.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.4.1",
-    "jest": "^24.8.0",
-    "jest-fetch-mock": "^2.1.2",
-    "jest-localstorage-mock": "^2.4.0",
-    "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.7.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react-hot-loader": "^4.11.1",
-    "sass-loader": "^7.1.0",
-    "sass-resources-loader": "^2.0.1",
-    "style-loader": "^0.23.1",
-    "svg-url-loader": "^2.3.3",
-    "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.34.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-git-hash": "^1.0.2",
-    "webpack-merge": "^4.2.1"
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.13.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-localstorage-mock": "^2.4.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react-hot-loader": "^4.12.21",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.1",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "license": "ISC"
 }
