--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
