--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --progress",
-    "serve": "webpack-dev-server --config build/webpack.dev.js --inline --colors --open --serve --hot --progress",
+    "dev": "webpack-dev-server --config build/webpack.dev.js --inline --colors --open --serve --hot --progress",
+    "start": "http-server docs",
     "test": "cross-env NODE_ENV=test jest",
     "stats": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --profile --json > stats.json",
     "analyze": "npm run stats && webpack-bundle-analyzer stats.json dist",
@@ -45,6 +46,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
@@ -56,6 +58,7 @@
     "eslint-plugin-react": "^7.20.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^4.3.0",
+    "http-server": "^0.12.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "jest-localstorage-mock": "^2.4.2",
@@ -70,7 +73,8 @@
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "license": "ISC"
 }
