--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --progress",
     "dev": "webpack-dev-server --config build/webpack.dev.js --inline --colors --open --serve --hot --progress",
-    "start": "http-server docs",
+    "start": "http-server docs -p 8081",
     "test": "cross-env NODE_ENV=test jest",
     "stats": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --profile --json > stats.json",
     "analyze": "npm run stats && webpack-bundle-analyzer stats.json dist",
@@ -30,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-pullable": "^1.0.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
