--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --progress",
     "dev": "webpack-dev-server --config build/webpack.dev.js --inline --colors --open --serve --hot --progress",
-    "start": "http-server docs -p 8081",
+    "start": "http-server docs",
     "test": "cross-env NODE_ENV=test jest",
     "stats": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --profile --json > stats.json",
     "analyze": "npm run stats && webpack-bundle-analyzer stats.json dist",
