--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
+    "gh-pages": "^2.2.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^4.3.0",
     "http-server": "^0.12.3",
