--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "debchik",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --progress",
     "dev": "webpack-dev-server --config build/webpack.dev.js --inline --colors --open --serve --hot --progress",
     "deploy": "gh-pages -d dist",
-    "start": "http-server docs",
+    "start": "http-server dist",
     "test": "cross-env NODE_ENV=test jest",
     "stats": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config build/webpack.prod.js --profile --json > stats.json",
     "analyze": "npm run stats && webpack-bundle-analyzer stats.json dist",
@@ -59,7 +59,7 @@
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "2.0.1",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^4.3.0",
     "http-server": "^0.12.3",
