--- a/manifest.json
+++ b/manifest.json
@@ -43,7 +43,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#3E4EB8",
